--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,34 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-12-02 09:21:36 -0600 
+%% Created for Jeff Erickson at 2015-12-12 13:59:54 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@phdthesis{s-cdcca-98,
+	Author = {Shaeffer, Gilles},
+	Date-Added = {2015-12-12 15:33:33 +0000},
+	Date-Modified = {2015-12-12 15:37:10 +0000},
+	Read = {1},
+	School = {Univ. Bordeaux I},
+	Title = {Conjugaison d'arbres et cartes combinatoires aléatoires},
+	Url = {http://www.lix.polytechnique.fr/~schaeffe/Biblio/PhD-Schaeffer.pdf},
+	Year = {1998}}
+
+@article{cv-pmwlt-81,
+	Author = {Cori, Robert and Vauquelin, Bernard},
+	Date-Added = {2015-12-12 15:21:46 +0000},
+	Date-Modified = {2015-12-12 15:22:37 +0000},
+	Journal = {Canad. J. Math.},
+	Number = {5},
+	Pages = {1023--1042},
+	Read = {1},
+	Title = {Planar maps are well labeled trees},
+	Volume = {33},
+	Year = {1981}}
 
 @article{a-cas-26,
 	Author = {Alexander, James W.},
