--- a/jeffe.bib
+++ b/jeffe.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-07-11 10:12:44 -0500 
+%% Created for Jeff Erickson at 2016-07-11 10:53:07 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -13,8 +13,8 @@
 
 @inproceedings{tangle,
 	Author = {Chang, Hsien-Chih and Erickson, Jeff},
-	Booktitle = {Proc. 32nd International Symposium on Computational Geometry},
-	Date-Modified = {2016-07-11 15:12:44 +0000},
+	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
+	Date-Modified = {2016-07-11 15:52:48 +0000},
 	Pages = {29:1--29:15},
 	Title = {Untangling Planar Curves},
 	Year = {2016},
