--- a/jeffe.bib
+++ b/jeffe.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-07-11 10:53:07 -0500 
+%% Created for Jeff Erickson at 2016-07-13 14:11:01 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -14,9 +14,12 @@
 @inproceedings{tangle,
 	Author = {Chang, Hsien-Chih and Erickson, Jeff},
 	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
-	Date-Modified = {2016-07-11 15:52:48 +0000},
+	Date-Modified = {2016-07-13 19:10:43 +0000},
 	Pages = {29:1--29:15},
+	Series = {Leibniz International Proceedings in Informatics },
 	Title = {Untangling Planar Curves},
+	Url = {http://drops.dagstuhl.de/opus/volltexte/2016/5921},
+	Volume = {51},
 	Year = {2016},
 	Bdsk-Url-1 = {http://jeffe.cs.illinois.edu/pubs/pdf/tangle.pdf}}
 
