--- a/topology.bib
+++ b/topology.bib
@@ -2,15 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-12-12 13:59:54 -0600 
+%% Created for Jeff Erickson at 2016-07-14 13:14:31 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{ek-ee2aa-08,
+	Author = {Eigenwillig, Arno and Kerber, Michael},
+	Booktitle = {Proc. 19th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Date-Added = {2016-07-14 17:54:33 +0000},
+	Date-Modified = {2016-07-14 17:55:24 +0000},
+	Pages = {122--131},
+	Read = {1},
+	Title = {Exact and efficient 2D-arrangements of arbitrary algebraic curves},
+	Year = {2008}}
+
 @unpublished{ce-upc-15,
-	Author = {Chang, Hsien-Chih and Erickson, Jeff G.},
+	Author = {Chang, Hsien-Chih and Erickson, Jeff},
 	Comments = {subsumes some results and sketches some others from earlier preprint "Electrical reduction, homotopy moves, and defect"},
+	Date-Modified = {2016-07-14 18:11:57 +0000},
 	Month = {December},
 	Note = {Unpublished manuscript},
 	Title = {Untangling Planar Curves},
@@ -26,7 +38,8 @@
 	School = {Univ. Bordeaux I},
 	Title = {Conjugaison d'arbres et cartes combinatoires aléatoires},
 	Url = {http://www.lix.polytechnique.fr/~schaeffe/Biblio/PhD-Schaeffer.pdf},
-	Year = {1998}}
+	Year = {1998},
+	Bdsk-Url-1 = {http://www.lix.polytechnique.fr/~schaeffe/Biblio/PhD-Schaeffer.pdf}}
 
 @article{cv-pmwlt-81,
 	Author = {Cori, Robert and Vauquelin, Bernard},
