--- a/topology.bib
+++ b/topology.bib
@@ -2,24 +2,106 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-09-24 00:53:00 -0500 
+%% Created for Jeff Erickson at 2016-10-11 05:38:39 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{k-npncg-76,
+	Author = {Kleitman, Daniel J.},
+	Date-Added = {2016-10-11 10:34:07 +0000},
+	Date-Modified = {2016-10-11 10:38:35 +0000},
+	Doi = {10.1016/0095-8956(76)90032-0},
+	Journal = {J. Comb. Theory Ser. B},
+	Number = {1},
+	Pages = {88--89},
+	Read = {1},
+	Title = {A note on the parity of the number of crossings of a graph},
+	Volume = {21},
+	Year = {1976}}
+
+@incollection{s-hrr-13,
+	Author = {Schaefer, Marcus},
+	Booktitle = {Geometry – Intuitive, Discrete, and Convex: A Tribute to László Fejes Tóth},
+	Date-Added = {2016-10-11 10:23:26 +0000},
+	Date-Modified = {2016-10-11 10:29:52 +0000},
+	Doi = {10.1007/978-3-642-41498-5_10},
+	Editor = {Bárány, Imre and Böröczky, Károly J. and Tóth, Gábor Fejes and Pach, János},
+	Pages = {259--299},
+	Publisher = {Springer},
+	Read = {1},
+	Series = {Bolyai Soc. Math. Studies},
+	Title = {{Hanani}-{Tutte} and related results},
+	Volume = {24},
+	Year = {2013}}
+
+@article{s-ttpht-13,
+	Author = {Schaefer, Marcus},
+	Date-Added = {2016-10-11 10:20:42 +0000},
+	Date-Modified = {2016-10-11 10:27:25 +0000},
+	Doi = {10.7155/jgaa.00298},
+	Journal = {J. Graph Algorithms Appl.},
+	Number = {4},
+	Pages = {367--440},
+	Read = {1},
+	Title = {Toward a theory of planarity: {Hanani}-{Tutte} and planarity variants},
+	Volume = {17},
+	Year = {2013}}
+
+@article{pss-rec-07,
+	Author = {Pelsmajer, Michael J. and Schaefer, Marcus and Štefankovič, Daniel},
+	Date-Added = {2016-10-11 10:12:18 +0000},
+	Date-Modified = {2016-10-11 10:13:53 +0000},
+	Doi = {10.1016/j.jctb.2006.08.001},
+	Journal = {J. Comb. Theory Ser. B},
+	Keywords = {Hanani-Tutte, Van Kampen obstruction},
+	Number = {4},
+	Pages = {489--500},
+	Read = {1},
+	Title = {Removing even crossings},
+	Volume = {97},
+	Year = {2007}}
+
+@article{pss-recs-09,
+	Author = {Pelsmajer, Michael J. and Schaefer, Marcus and Štefankovič, Daniel},
+	Date-Added = {2016-10-11 10:07:51 +0000},
+	Date-Modified = {2016-10-11 10:09:21 +0000},
+	Doi = {10.1016/j.ejc.2009.03.002},
+	Journal = {Europ. J. Combin.},
+	Number = {7},
+	Pages = {1704--1717},
+	Read = {1},
+	Title = {Removing even crossings on surfaces},
+	Volume = {30},
+	Year = {2009}}
+
+@misc{cg-msbmt-16,
+	Arxiv = {1609.07779v1},
+	Author = {Cartwright, Julyan H. E. and González, Diego L.},
+	Comments = {Al Jazari 1206!},
+	Date-Added = {2016-09-28 03:49:46 +0000},
+	Date-Modified = {2016-09-28 03:52:32 +0000},
+	Howpublished = {Preprint},
+	Month = {September},
+	Read = {1},
+	Title = {Möbius strips before {Möbius}: {Topological} hints in ancient representations},
+	Year = {2016}}
+
 @article{s-dpcem-98,
 	Author = {Skopenkov, Arkadiy B.},
 	Date-Added = {2016-09-24 05:29:14 +0000},
-	Date-Modified = {2016-09-24 05:49:42 +0000},
+	Date-Modified = {2016-09-28 03:52:39 +0000},
 	Doi = {10.1090/S0002-9939-98-04142-2},
 	Journal = {Proc. Amer. Math. Soc.},
 	Number = {8},
 	Pages = {2467–2476},
+	Read = {1},
 	Title = {On the deleted product criterion for embeddability in {$\mathbb{R}^m$}},
 	Volume = {126},
-	Year = {1998}}
+	Year = {1998},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1090/S0002-9939-98-04142-2}}
 
 @article{REPOVS19981,
 	Author = {Repovš, Dušan and Skopenkov, Arkadij B.},
@@ -153,9 +235,10 @@
 @unpublished{ce-upc-15,
 	Author = {Chang, Hsien-Chih and Erickson, Jeff},
 	Comments = {subsumes some results and sketches some others from earlier preprint "Electrical reduction, homotopy moves, and defect"},
-	Date-Modified = {2016-07-14 18:11:57 +0000},
+	Date-Modified = {2016-09-28 03:52:43 +0000},
 	Month = {December},
 	Note = {Unpublished manuscript},
+	Read = {1},
 	Title = {Untangling Planar Curves},
 	Url = {http://jeffe.cs.illinois.edu/pubs/pdf/tangle.pdf},
 	Year = {2015},
@@ -2560,15 +2643,14 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 	Year = {1985}}
 
 @incollection{cdr-ilstl-02,
-	Author = {Connelly, Robert and Demaine, Erik D. and Rote, G\"unter},
+	Author = {Connelly, Robert and Demaine, Erik D. and Rote, Günter},
 	Booktitle = {Physical Knots: Knotting, Linking, and Folding of Geometric Objects in $\mathbb{R}^3$},
 	Date-Added = {2014-07-20 15:26:41 +0000},
-	Date-Modified = {2014-07-20 15:26:41 +0000},
+	Date-Modified = {2016-10-11 10:16:45 +0000},
 	Editor = {Calvo, Jorge and Millett, Kenneth and Rawdon, Eric},
 	Pages = {287--311},
-	Papers = {InfinitesimallyLocked_CGW2001},
 	Publisher = {Amer. Math. Soc.},
-	Replaces = {InfinitesimallyLocked_CGW2001},
+	Read = {1},
 	Title = {Infinitesimally Locked Self-Touching Linkages with Applications to Locked Trees},
 	Year = {2002}}
 
@@ -10915,7 +10997,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{sss-sfwv-11,
 	Author = {Schaefer, Marcus and Sedgwick, Eric and Štefankovič, Daniel},
 	Date-Added = {2011-07-09 09:50:32 -0500},
-	Date-Modified = {2011-12-22 21:19:15 +0000},
+	Date-Modified = {2016-10-11 10:17:00 +0000},
+	Doi = {10.1007/s00453-009-9362-8},
 	Journal = {Algorithmica},
 	Number = {3},
 	Pages = {609--626},
