--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-10-11 05:38:39 -0500 
+%% Created for Jeff Erickson at 2016-10-19 13:23:21 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{n-iigip-10,
+	Author = {Nikkuni, Ryo},
+	Date-Added = {2016-10-19 18:13:12 +0000},
+	Date-Modified = {2016-10-19 18:20:58 +0000},
+	Journal = {Homology Homotopy Appl.},
+	Keywords = {rotation number, deleted product, weakly simple},
+	Number = {1},
+	Pages = {45--60},
+	Read = {1},
+	Title = {On the {Wu} invariants for immersions of a graph into the plane},
+	Url = {http://projecteuclid.org/euclid.hha/1296223821},
+	Volume = {12},
+	Year = {2010}}
 
 @article{k-npncg-76,
 	Author = {Kleitman, Daniel J.},
@@ -20,7 +34,8 @@
 	Read = {1},
 	Title = {A note on the parity of the number of crossings of a graph},
 	Volume = {21},
-	Year = {1976}}
+	Year = {1976},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0095-8956(76)90032-0}}
 
 @incollection{s-hrr-13,
 	Author = {Schaefer, Marcus},
@@ -35,7 +50,8 @@
 	Series = {Bolyai Soc. Math. Studies},
 	Title = {{Hanani}-{Tutte} and related results},
 	Volume = {24},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/978-3-642-41498-5_10}}
 
 @article{s-ttpht-13,
 	Author = {Schaefer, Marcus},
@@ -48,7 +64,8 @@
 	Read = {1},
 	Title = {Toward a theory of planarity: {Hanani}-{Tutte} and planarity variants},
 	Volume = {17},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {http://dx.doi.org/10.7155/jgaa.00298}}
 
 @article{pss-rec-07,
 	Author = {Pelsmajer, Michael J. and Schaefer, Marcus and Štefankovič, Daniel},
@@ -62,7 +79,8 @@
 	Read = {1},
 	Title = {Removing even crossings},
 	Volume = {97},
-	Year = {2007}}
+	Year = {2007},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.jctb.2006.08.001}}
 
 @article{pss-recs-09,
 	Author = {Pelsmajer, Michael J. and Schaefer, Marcus and Štefankovič, Daniel},
@@ -75,7 +93,8 @@
 	Read = {1},
 	Title = {Removing even crossings on surfaces},
 	Volume = {30},
-	Year = {2009}}
+	Year = {2009},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.ejc.2009.03.002}}
 
 @misc{cg-msbmt-16,
 	Arxiv = {1609.07779v1},
@@ -4577,10 +4596,13 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{i-r3s-01,
 	Author = {Ivanov, Sergei},
 	Date-Added = {2012-06-14 18:32:43 +0000},
-	Date-Modified = {2012-06-14 18:33:18 +0000},
+	Date-Modified = {2016-10-19 18:22:26 +0000},
 	Journal = {Illinois J. Math.},
+	Number = {4},
 	Pages = {1073--1117},
+	Read = {1},
 	Title = {Recognizing the 3-sphere},
+	Url = {http://projecteuclid.org/euclid.ijm/1258138058},
 	Volume = {49},
 	Year = {2001}}
 
@@ -9204,12 +9226,13 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{f-acrsg-76,
 	Author = {Francis, George K.},
 	Date-Added = {2011-12-07 12:48:53 +0000},
-	Date-Modified = {2011-12-26 22:48:04 +0000},
+	Date-Modified = {2016-10-19 18:18:18 +0000},
 	Journal = {Illinois J. Math.},
 	Number = {2},
 	Pages = {198--217},
 	Read = {1},
 	Title = {Assembling compact {Riemann} surfaces with given boundary curves and branch points on the sphere},
+	Url = {http://projecteuclid.org/euclid.ijm/1256049897},
 	Volume = {20},
 	Year = {1976}}
 
@@ -11823,12 +11846,15 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Bdsk-Url-1 = {http://biogeometry.duke.edu/newsletter/issues/0502feb.pdf}}
 
 @article{n-ild-66,
-	Author = {Neuwirth, L.},
+	Author = {Neuwirth, Lee},
 	Date-Added = {2011-05-15 23:05:12 -0500},
-	Date-Modified = {2011-05-15 23:05:44 -0500},
+	Date-Modified = {2016-10-19 18:20:34 +0000},
 	Journal = {Illinois J. Math.},
+	Number = {3},
 	Pages = {470--478},
+	Read = {1},
 	Title = {Imbedding in low dimensions},
+	Url = {http://projecteuclid.org/euclid.ijm/1256054999},
 	Volume = {10},
 	Year = {1966}}
 
@@ -14271,11 +14297,13 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{jt-acdc3-95,
 	Author = {Jaco, William and Tollefson, Jeffrey L.},
 	Date-Added = {2009-11-01 17:29:27 -0600},
-	Date-Modified = {2009-11-01 17:32:48 -0600},
+	Date-Modified = {2016-10-19 18:22:57 +0000},
 	Journal = {Illinois J. Math.},
 	Number = {3},
 	Pages = {358--406},
+	Read = {1},
 	Title = {Algorithms for the complete decomposition of a closed 3-manifold},
+	Url = {http://projecteuclid.org/euclid.ijm/1255986385},
 	Volume = {39},
 	Year = {1995}}
 
