--- a/data-structures.bib
+++ b/data-structures.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-09-09 12:27:41 -0500 
+%% Created for Jeff Erickson at 2016-12-02 18:03:25 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{kt-tb2is-98,
+	Author = {Koutsoupias, Elias and Taylor, David Scot},
+	Date-Added = {2016-12-02 22:57:56 +0000},
+	Date-Modified = {2016-12-02 23:02:06 +0000},
+	Journal = {Proc. 17th Ann. ACM Symp. Principles Database Syst.},
+	Pages = {52--58},
+	Read = {1},
+	Title = {Tight bounds for 2-dimensional indexing schemes},
+	Year = {1998}}
 
 @inproceedings{cgkms-sbstw-15,
 	Arxiv = {1503.03105},
