--- a/optimization.bib
+++ b/optimization.bib
@@ -2,12 +2,79 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-08-29 12:46:47 -0500 
+%% Created for Jeff Erickson at 2016-12-02 17:56:35 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{krt-fdmfa-94,
+	Author = {King, Valerie and Rao, Satish and Tarjan, Robert E.},
+	Date-Added = {2016-11-22 16:49:55 +0000},
+	Date-Modified = {2016-11-22 16:49:55 +0000},
+	Journal = {J. Algorithms},
+	Number = {3},
+	Pages = {447--474},
+	Title = {A faster deterministic maximum flow algorithm},
+	Volume = {17},
+	Year = {1994}}
+
+@inproceedings{bkmnw-msmsm-11,
+	Author = {Borradaile, Glencora and Klein, Philip N. and Mozes, Shay and Nussbaum, Yahav and Wulff-Nilsen, Christian},
+	Booktitle = {Proc. 52nd IEEE Symp. Found. Comput. Sci.},
+	Date-Added = {2016-11-22 16:49:55 +0000},
+	Date-Modified = {2016-11-22 16:49:55 +0000},
+	Pages = {170--179},
+	Title = {Multiple-Source Multiple-Sink Maximum Flow in Directed Planar Graphs in Near-Linear Time},
+	Year = {2011}}
+
+@inproceedings{cns-medpk-13,
+	Author = {Chekuri, Chandra and Naves, Guyslain and Shepherd, F. Bruce},
+	Booktitle = {Proc. 40th Int. Colloq. Automata Lang. Prog.},
+	Date-Added = {2016-11-22 16:49:55 +0000},
+	Date-Modified = {2016-11-22 16:49:55 +0000},
+	Pages = {328--339},
+	Title = {Maximum Edge-Disjoint Paths in $k$-Sums of Graphs},
+	Year = {2013}}
+
+@article{k-rscfn-99,
+	Abstract = {We use random sampling as a tool for solving undirected graph problems. We show that the sparse graph, or skeleton, that arises when we randomly sample a graph's edges will accurately approximate the value of all cuts in the original graph with high probability. This makes sampling effective for problems involving cuts in graphs. We present fast randomized (Monte Carlo and Las Vegas) algorithms for approximating and exactly finding minimum cuts and maximum flows in unweighted, undirected graphs. Our cut-approximation algorithms extend unchanged to weighted graphs while our weighted-graph flow algorithms are somewhat slower. Our approach gives a general paradigm with potential applications to any packing problem. It has since been used in a near-linear time algorithm for finding minimum cuts, as well as faster cut and flow algorithms. Our sampling theorems also yield faster algorithms for several other cut-based problems, including approximating the best balanced cut of a graph, finding a k-connected orientation of a 2k-connected graph, and finding integral multicommodity flows in graphs with a great deal of excess capacity. Our methods also improve the efficiency of some parallel cut and flow algorithms. Our methods also apply to the network design problem, where we wish to build a network satisfying certain connectivity requirements between vertices. We can purchase edges of various costs and wish to satisfy the requirements at minimum total cost. Since our sampling theorems apply even when the sampling probabilities are different for different edges, we can apply randomized rounding to solve network design problems. This gives approximation algorithms that guarantee much better approximations than previous algorithms whenever the minimum connectivity requirement is large. As a particular example, we improve the best approximation bound for the minimum k-connected subgraph problem from 1.85 to 1 + O(√log n)/k).},
+	Author = {Karger, David R.},
+	Copyright = {Copyright © 1999 INFORMS},
+	Date-Added = {2016-11-22 16:49:50 +0000},
+	Date-Modified = {2016-11-22 16:49:50 +0000},
+	Issn = {0364765X},
+	Journal = {Mathematics of Operations Research},
+	Jstor_Articletype = {research-article},
+	Jstor_Formatteddate = {May, 1999},
+	Language = {English},
+	Number = {2},
+	Pages = {pp. 383-413},
+	Publisher = {INFORMS},
+	Title = {Random Sampling in Cut, Flow, and Network Design Problems},
+	Url = {http://www.jstor.org/stable/3690490},
+	Volume = {24},
+	Year = {1999},
+	Bdsk-Url-1 = {http://www.jstor.org/stable/3690490}}
+
+@inproceedings{ks-oamc-93,
+	Author = {Karger, David R. and Stein, Clifford},
+	Booktitle = {Proc. 25th Ann. ACM Symp. Theory Comput.},
+	Date-Added = {2016-11-22 16:49:44 +0000},
+	Date-Modified = {2016-12-02 22:55:38 +0000},
+	Pages = {757--765},
+	Title = {An $\tilde{O}(n^2)$ algorithm for minimum cuts},
+	Year = {1993}}
+
+@inproceedings{o-mfotl-13,
+	Author = {Orlin, James B.},
+	Booktitle = {Proc. 45th Ann. ACM Symp. Theory Comput.},
+	Date-Added = {2016-11-22 16:47:36 +0000},
+	Date-Modified = {2016-11-22 16:47:36 +0000},
+	Pages = {765--774},
+	Title = {Max flows in {$O(nm)$} time, or better},
+	Year = {2013}}
 
 @inproceedings{mmprw-fesp-05,
 	Author = {Maggs, Bruce M. and Miller, Gary L. and Parekh, Ojas and Ravi, R. and Woo, Shan Leung Maverick},
@@ -1187,16 +1254,6 @@
 	Url = {http://www.inf.uni-konstanz.de/Preprints/papers/1996/preprint-019.pdf},
 	Year = {1996},
 	Bdsk-Url-1 = {http://www.inf.uni-konstanz.de/Preprints/papers/1996/preprint-019.pdf}}
-
-@inproceedings{bkmnw-msmsm-11,
-	Author = {Borradaile, Glencora and Klein, Philip N. and Mozes, Shay and Nussbaum, Yahav and Wulff-Nilsen, Christian},
-	Booktitle = {Proc. 52nd Ann. Symp. Found. Comput. Sci.},
-	Date-Added = {2013-06-24 22:25:15 +0000},
-	Date-Modified = {2013-07-22 16:18:49 +0000},
-	Pages = {170--179},
-	Read = {1},
-	Title = {Multiple-Source Multiple-Sink Maximum Flow in Directed Planar Graphs in Near-Linear Time},
-	Year = {2011}}
 
 @article{snn-laboo-99,
 	Author = {Rahman, Md. Saidur and Nakano, Shin-Ichi and Nishizeki, Takao},
