--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,80 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-10-19 13:23:21 -0500 
+%% Created for Jeff Erickson at 2016-11-22 10:59:43 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cdem-fotc-10,
+	Author = {Cabello, Sergio and DeVos, Matt and Erickson, Jeff and Mohar, Bojan},
+	Date-Added = {2016-11-22 16:55:50 +0000},
+	Date-Modified = {2016-11-22 16:55:51 +0000},
+	Journal = {ACM Trans. Algorithms},
+	Number = {4},
+	Pages = {article 61},
+	Read = {1},
+	Title = {Finding one tight cycle},
+	Volume = {6},
+	Year = {2010},
+	Bdsk-Url-1 = {http://compgeom.cs.uiuc.edu/~jeffe/pubs/tight.html}}
+
+@book{gt-tgt-01,
+	Author = {Gross, Jonathan L. and Tucker, Thomas W.},
+	Date-Added = {2016-11-22 16:55:25 +0000},
+	Date-Modified = {2016-11-22 16:55:27 +0000},
+	Keywords = {graphs, textbook},
+	Publisher = {Dover Publications},
+	Read = {1},
+	Title = {Topological graph theory},
+	Year = {2001}}
+
+@inproceedings{f-sntcd-13,
+	Author = {Fox, Kyle},
+	Booktitle = {Proc. 24th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Date-Added = {2016-11-22 16:55:08 +0000},
+	Date-Modified = {2016-11-22 16:55:09 +0000},
+	Pages = {352--364},
+	Read = {1},
+	Title = {Shortest Non-trivial Cycles in Directed and Undirected Surface Graphs},
+	Year = {2013}}
+
+@article{cce-msspe-13,
+	Author = {Cabello, Sergio and Chambers, Erin W. and Erickson, Jeff},
+	Date-Added = {2016-11-22 16:54:53 +0000},
+	Date-Modified = {2016-11-22 16:54:55 +0000},
+	Journal = {SIAM J. Comput.},
+	Number = {4},
+	Pages = {1542--1571},
+	Read = {1},
+	Title = {Multiple-source shortest paths in embedded graphs},
+	Volume = {42},
+	Year = {2013}}
+
+@article{cen-hfcc-12,
+	Author = {Chambers, Erin W. and Erickson, Jeff and Nayyeri, Amir},
+	Date-Added = {2016-11-22 16:54:40 +0000},
+	Date-Modified = {2016-11-22 16:54:42 +0000},
+	Journal = {SIAM J. Comput.},
+	Number = {6},
+	Pages = {1605-1634},
+	Read = {1},
+	Title = {Homology flows, cohomology cuts},
+	Volume = {41},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/pubs/surflow.html}}
+
+@inproceedings{efn-gmcse-12,
+	Author = {Erickson, Jeff and Fox, Kyle and Nayyeri, Amir},
+	Booktitle = {Proc. 23rd Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Date-Added = {2016-11-22 16:54:11 +0000},
+	Date-Modified = {2016-11-22 16:59:43 +0000},
+	Pages = {1309--1318},
+	Read = {1},
+	Title = {Global minimum cuts in surface embedded graphs},
+	Year = {2012}}
 
 @article{n-iigip-10,
 	Author = {Nikkuni, Ryo},
@@ -21,7 +89,8 @@
 	Title = {On the {Wu} invariants for immersions of a graph into the plane},
 	Url = {http://projecteuclid.org/euclid.hha/1296223821},
 	Volume = {12},
-	Year = {2010}}
+	Year = {2010},
+	Bdsk-Url-1 = {http://projecteuclid.org/euclid.hha/1296223821}}
 
 @article{k-npncg-76,
 	Author = {Kleitman, Daniel J.},
@@ -154,8 +223,8 @@
 @article{m-esaip-97,
 	Author = {Minc, Piotr},
 	Date-Added = {2016-09-24 03:14:38 +0000},
-	Date-Modified = {2016-09-24 03:14:38 +0000},
-	Journal = {Topoplogy Proc.},
+	Date-Modified = {2016-11-01 11:12:11 +0000},
+	Journal = {Topology Proc.},
 	Keywords = {weakly simple, derivatives},
 	Month = {Summer},
 	Pages = {305--340},
@@ -1757,14 +1826,16 @@
 @article{ao-gasi-99,
 	Author = {Arakawa, Hideyo and Ozawa, Tetsuya},
 	Comments = {basepoint-free formula for strangeness, obtained by averaging Shumakovitch's formula over all possible basepoints},
-	Date-Modified = {2015-07-30 20:59:19 +0000},
+	Date-Modified = {2016-11-16 01:15:50 +0000},
+	Doi = {10.1142/S0218216599000389},
 	Journal = {J. Knot Theory Ramif.},
 	Number = {5},
 	Pages = {551--567},
 	Read = {1},
 	Title = {A generalization of {Arnold's} strangeness invariant},
 	Volume = {8},
-	Year = {1999}}
+	Year = {1999},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1142/S0218216599000389}}
 
 @article{o-fotip-99,
 	Author = {Ozawa, Tetsuya},
@@ -2817,9 +2888,9 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 @article{cgv-rep-96,
 	Author = {{Colin de Verdière}, Yves and Gitler, Isidoro and Vertigan, Dirk},
 	Date-Added = {2014-07-12 16:18:22 +0000},
-	Date-Modified = {2015-08-02 12:18:57 +0000},
+	Date-Modified = {2016-11-22 14:57:26 +0000},
 	Journal = {Comment. Math. Helvetici},
-	Number = {144--167},
+	Pages = {144--167},
 	Read = {1},
 	Title = {Réseaux électriques planaires {II}},
 	Volume = {71},
@@ -4604,7 +4675,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Title = {Recognizing the 3-sphere},
 	Url = {http://projecteuclid.org/euclid.ijm/1258138058},
 	Volume = {49},
-	Year = {2001}}
+	Year = {2001},
+	Bdsk-Url-1 = {http://projecteuclid.org/euclid.ijm/1258138058}}
 
 @article{i-ccbdp-08,
 	Author = {Ivanov, Sergei},
@@ -9234,7 +9306,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Title = {Assembling compact {Riemann} surfaces with given boundary curves and branch points on the sphere},
 	Url = {http://projecteuclid.org/euclid.ijm/1256049897},
 	Volume = {20},
-	Year = {1976}}
+	Year = {1976},
+	Bdsk-Url-1 = {http://projecteuclid.org/euclid.ijm/1256049897}}
 
 @article{t-ctafb-61,
 	Author = {Titus, Charles J.},
@@ -11856,7 +11929,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Title = {Imbedding in low dimensions},
 	Url = {http://projecteuclid.org/euclid.ijm/1256054999},
 	Volume = {10},
-	Year = {1966}}
+	Year = {1966},
+	Bdsk-Url-1 = {http://projecteuclid.org/euclid.ijm/1256054999}}
 
 @article{s-rsp3g-62,
 	Author = {Stallings, John R.},
@@ -14305,7 +14379,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Title = {Algorithms for the complete decomposition of a closed 3-manifold},
 	Url = {http://projecteuclid.org/euclid.ijm/1255986385},
 	Volume = {39},
-	Year = {1995}}
+	Year = {1995},
+	Bdsk-Url-1 = {http://projecteuclid.org/euclid.ijm/1255986385}}
 
 @article{k-gfdm-30,
 	Author = {Kneser, Helmuth},
