--- a/data-structures.bib
+++ b/data-structures.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-12-02 18:03:25 -0500 
+%% Created for Jeff Erickson at 2016-12-04 07:54:36 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{bdlrr-drmqf-12,
+	Author = {Brodal, Gerth Stølting and Davoodi, Pooya and Lewenstein, Moshe and Raman, Rajeev and Rao, Satti Srinivasa},
+	Booktitle = {Proc. 20th Ann. European Symp. Algorithms},
+	Date-Added = {2016-12-04 13:49:51 +0000},
+	Date-Modified = {2016-12-04 13:51:46 +0000},
+	Doi = {10.1007/978-3-642-33090-2_20},
+	Pages = {217--228},
+	Publisher = {Springer},
+	Read = {1},
+	Series = {Lecture Notes Comput. Sci.},
+	Title = {Two Dimensional Range Minimum Queries and {Fibonacci} Lattices},
+	Volume = {7501},
+	Year = {2012}}
 
 @article{kt-tb2is-98,
 	Author = {Koutsoupias, Elias and Taylor, David Scot},
