--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,39 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-11-22 10:59:43 -0600 
+%% Created for Jeff Erickson at 2016-12-09 14:03:19 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{bt-ipt-89,
+	Author = {Battista, Giuseppe Di and Tamassia, Roberto},
+	Booktitle = {Proc. 30th Ann. IEEE Symp. Foundations Comput. Sci.},
+	Date-Added = {2016-12-09 19:58:30 +0000},
+	Date-Modified = {2016-12-09 20:00:38 +0000},
+	Doi = {10.1109/SFCS.1989.63515},
+	Keywords = {SPQR-trees},
+	Pages = {436--441},
+	Read = {1},
+	Title = {Incremental planarity testing},
+	Year = {1989}}
+
+@article{m-scpcg-37,
+	Author = {{Mac Lane}, Saunders},
+	Comments = {Unique decomposition of planar graphs into maximal 3-connected subgraphs},
+	Date-Added = {2016-12-09 17:48:48 +0000},
+	Date-Modified = {2016-12-09 17:51:07 +0000},
+	Doi = {10.1215/S0012-7094-37-00336-3},
+	Journal = {Duke Math. J.},
+	Number = {3},
+	Pages = {460--472},
+	Read = {1},
+	Title = {A structural characterization of planar combinatorial graphs},
+	Volume = {3},
+	Year = {1937},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1215/S0012-7094-37-00336-3}}
 
 @article{cdem-fotc-10,
 	Author = {Cabello, Sergio and DeVos, Matt and Erickson, Jeff and Mohar, Bojan},
@@ -2747,10 +2774,11 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 @article{cbpp-ecpg-09,
 	Author = {Cortese, Pier Francesco and Battista, Giuseppe Di and Patrignani, Maurizio and Pizzonia, Maurizio},
 	Date-Added = {2014-07-20 15:26:41 +0000},
-	Date-Modified = {2014-07-20 15:26:41 +0000},
+	Date-Modified = {2016-12-09 19:58:29 +0000},
 	Journal = {Discrete Mathematics},
 	Number = {7},
 	Pages = {1856--1869},
+	Read = {1},
 	Title = {On embedding a cycle in a plane graph},
 	Volume = {309},
 	Year = {2009}}
@@ -5625,9 +5653,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Year = {1978}}
 
 @article{el-gh-53,
-	Author = {Eilenberg, Samuel and Lane, Saunders Mac},
+	Author = {Eilenberg, Samuel and {Mac Lane}, Saunders},
 	Date-Added = {2012-04-30 11:20:01 +0000},
-	Date-Modified = {2012-04-30 11:21:38 +0000},
+	Date-Modified = {2016-12-09 17:55:05 +0000},
 	Journal = {Ann. Math.},
 	Keywords = {shuffle product, complete semi-simplicial complexes},
 	Number = {1},
@@ -7089,16 +7117,19 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Volume = {1--6},
 	Year = {2004--2007}}
 
-@article{l-ccpg-37,
-	Author = {Lane, Saunders Mac},
+@article{m-ccpg-37,
+	Author = {{Mac Lane}, Saunders},
 	Date-Added = {2012-03-01 15:55:12 +0000},
-	Date-Modified = {2012-03-01 16:14:22 +0000},
+	Date-Modified = {2016-12-09 17:54:48 +0000},
 	Journal = {Fund. Math.},
+	Number = {1},
 	Pages = {22--32},
 	Read = {1},
 	Title = {A combinatorial condition for planar graphs},
+	Url = {http://eudml.org/doc/212919},
 	Volume = {28},
-	Year = {1937}}
+	Year = {1937},
+	Bdsk-Url-1 = {http://eudml.org/doc/212919}}
 
 @article{l-pgrt-65,
 	Author = {Lefschetz, Solomon},
