--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-12-09 14:03:19 -0600 
+%% Created for Jeff Erickson at 2016-12-11 15:06:32 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{a-ccccc-30,
+	Author = {Adkisson, Virgil W.},
+	Comments = {can't find online},
+	Date-Added = {2016-12-11 20:59:25 +0000},
+	Date-Modified = {2016-12-11 21:05:30 +0000},
+	Journal = {C. R. Séances Soc. Sci. Lett. Varsovie III},
+	Pages = {164--193},
+	Title = {Cyclicly connected continuous curves whose complementary domain boundaries are homeomorphic, preserving branch points},
+	Volume = {23},
+	Year = {1930}}
 
 @inproceedings{bt-ipt-89,
 	Author = {Battista, Giuseppe Di and Tamassia, Roberto},
@@ -19,7 +30,8 @@
 	Pages = {436--441},
 	Read = {1},
 	Title = {Incremental planarity testing},
-	Year = {1989}}
+	Year = {1989},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/SFCS.1989.63515}}
 
 @article{m-scpcg-37,
 	Author = {{Mac Lane}, Saunders},
@@ -10423,8 +10435,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @article{w-cgcg-32,
 	Author = {Whitney, Hassler},
+	Comments = {3-connected planar graphs have unique planar embeddings},
 	Date-Added = {2011-10-05 09:12:07 +0000},
-	Date-Modified = {2012-03-25 21:56:34 +0000},
+	Date-Modified = {2016-12-11 20:49:33 +0000},
 	Journal = {Amer. J. Math.},
 	Number = {1},
 	Pages = {150--168},
