thank mr unicode

--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-12-11 15:06:32 -0600 
+%% Created for Jeff Erickson at 2016-12-11 15:07:59 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -13,8 +13,8 @@
 	Author = {Adkisson, Virgil W.},
 	Comments = {can't find online},
 	Date-Added = {2016-12-11 20:59:25 +0000},
-	Date-Modified = {2016-12-11 21:05:30 +0000},
-	Journal = {C. R. Séances Soc. Sci. Lett. Varsovie III},
+	Date-Modified = {2016-12-11 21:07:59 +0000},
+	Journal = {C. R. Séances Soc. Sci. Lett. Varsovie III},
 	Pages = {164--193},
 	Title = {Cyclicly connected continuous curves whose complementary domain boundaries are homeomorphic, preserving branch points},
 	Volume = {23},
