--- a/topology.bib
+++ b/topology.bib
@@ -1127,16 +1127,16 @@
 	Volume = {24},
 	Year = {2015}}
 
-@misc{ehln-irkl-14,
+@article{ehln-irkl-14,
 	Arxiv = {1411.3308},
 	Author = {Even-Zohar, Chaim and Hass, Joel and Linial, Nati and Nowik, Tahl},
-	Date-Added = {2015-08-29 18:52:53 +0000},
-	Date-Modified = {2015-08-29 19:12:33 +0000},
-	Howpublished = {Preprint},
-	Month = {November},
+	Journal = {Discrete \& Computational Geometry},
+	Number = {2},
+	Pages = {274--314},
 	Read = {1},
-	Title = {Invariants of random knots and links},
-	Year = {2014}}
+	Title = {Invariants of Random Knots and Links},
+	Volume = {56},
+	Year = {2016}}
 
 @phdthesis{b-pndg-07,
 	Author = {Batchu, Umalatha N.},
