--- a/jeffe.bib
+++ b/jeffe.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-07-13 14:11:01 -0500 
+%% Created for Jeff Erickson at 2017-01-02 17:41:38 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,12 +11,42 @@
 @string{jeffe = {Jeff Erickson}}
 
 
+@inproceedings{repcube,
+	Author = {Abel, Zachary and Ballinger, Brad and Demaine, Erik D. and Demaine, Martin L. and Erickson, Jeff and Hesterberg, Adam and Ito, Hiro and Kostitsyna, Irina and Lynch, Jayson and Uehara, Ryuhei},
+	Booktitle = {Abstracts 19th Japan Conf. Discrete Comput. Geom., Graphs, Games},
+	Date-Added = {2017-01-02 23:39:22 +0000},
+	Date-Modified = {2017-01-02 23:40:58 +0000},
+	Note = {Journal version in submission},
+	Pages = {42--43},
+	Title = {Unfolding and dissection of multiple cubes},
+	Year = {2016}}
+
+@inproceedings{fastweak,
+	Author = {Akitaya, Hugo and Aloupis, Greg and Erickson, Jeff and Tóth, Csaba},
+	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
+	Date-Added = {2017-01-02 23:37:08 +0000},
+	Date-Modified = {2017-01-02 23:41:12 +0000},
+	Note = {Journal version in submission},
+	Pages = {8:1--8:16},
+	Title = {Recognizing weakly simple polygons},
+	Year = {2016}}
+
+@inproceedings{weak,
+	Author = {Chang, Hsien-Chih and Erickson, Jeff and Xu, Chao},
+	Booktitle = {Proc. 26th ACM-SIAM Symp. Discrete Algorithms},
+	Date-Added = {2017-01-02 23:35:38 +0000},
+	Date-Modified = {2017-01-02 23:37:07 +0000},
+	Pages = {1655--1670},
+	Title = {Detecting weakly simple polygons},
+	Year = {2015}}
+
 @inproceedings{tangle,
 	Author = {Chang, Hsien-Chih and Erickson, Jeff},
 	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
-	Date-Modified = {2016-07-13 19:10:43 +0000},
+	Date-Modified = {2017-01-02 23:41:38 +0000},
+	Note = {Full version to appear in \emph{Disc. Comput. Geom.}},
 	Pages = {29:1--29:15},
-	Series = {Leibniz International Proceedings in Informatics },
+	Series = {Leibniz International Proceedings in Informatics},
 	Title = {Untangling Planar Curves},
 	Url = {http://drops.dagstuhl.de/opus/volltexte/2016/5921},
 	Volume = {51},
