--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2016-12-11 15:07:59 -0600 
+%% Created for Jeff Erickson at 2017-01-27 16:35:50 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -353,10 +353,10 @@
 	Author = {Eigenwillig, Arno and Kerber, Michael},
 	Booktitle = {Proc. 19th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2016-07-14 17:54:33 +0000},
-	Date-Modified = {2016-07-14 17:55:24 +0000},
+	Date-Modified = {2017-01-27 22:33:39 +0000},
 	Pages = {122--131},
 	Read = {1},
-	Title = {Exact and efficient 2D-arrangements of arbitrary algebraic curves},
+	Title = {Exact and efficient {2D}-arrangements of arbitrary algebraic curves},
 	Year = {2008}}
 
 @unpublished{ce-upc-15,
@@ -3173,10 +3173,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Year = {1999}}
 
 @article{e-rpges-66,
-	Author = {Epifanov, G. V.},
+	Author = {Epifanov, G. {V}.},
 	Comments = {first proof, no upper bound on number of moves},
 	Date-Added = {2013-10-29 04:00:35 +0000},
-	Date-Modified = {2013-10-29 04:11:27 +0000},
+	Date-Modified = {2017-01-27 22:35:16 +0000},
 	Journal = {Dokl. Akad. Nauk SSSR},
 	Note = {In Russian. English translation in \textit{Soviet Math. Dokl.} 7:13--17, 1966},
 	Pages = {19--22},
