--- a/compgeom.bib
+++ b/compgeom.bib
@@ -9,6 +9,38 @@
 
 
 
+@article{ce-oails-92,
+	Author = {Chazelle, Bernard and Edelsbrunner, Herbert},
+	Date-Added = {2016-07-14 18:19:48 +0000},
+	Date-Modified = {2016-07-14 18:20:10 +0000},
+	Journal = {J. ACM},
+	Number = 1,
+	Pages = {1--54},
+	Title = {An optimal algorithm for intersecting line segments in the plane},
+	Volume = {39},
+	Year = {1992}}
+
+@article{m-fppa-90,
+	Author = {Mulmuley, Ketan},
+	Date-Added = {2016-07-14 18:09:21 +0000},
+	Date-Modified = {2016-07-14 18:09:37 +0000},
+	Journal = {J. Symbolic Comput.},
+	Number = {3--4},
+	Pages = {253--280},
+	Title = {A Fast Planar Partition Algorithm, {I}},
+	Volume = {10},
+	Year = {1990}}
+
+@article{cs-arscg-89,
+	Author = {Clarkson, Kenneth L. and Shor, Peter W.},
+	Date-Added = {2016-07-14 18:07:49 +0000},
+	Date-Modified = {2016-07-14 18:08:10 +0000},
+	Journal = {Discrete Comput. Geom.},
+	Pages = {387--421},
+	Title = {Applications of random sampling in computational geometry, {II}},
+	Volume = {4},
+	Year = {1989}}
+
 @article{aghtu-acgg-08,
 	Author = {Manuel Abellanas and Alfredo Garc{\'\i}a and Ferran Hurtado and Javier Tejel and Jorge Urrutia},
 	Comments = {weakly simple = non-self-crossing (no definition of latter)},
