--- a/topology.bib
+++ b/topology.bib
@@ -8,6 +8,33 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@inproceedings{abil-ivd-16,
+	Annote = {Keywords: Voronoi diagrams, dynamic data structures, Delaunay triangulation},
+	Arxiv = {1603.08485},
+	Author = {Allen, Sarah R. and Barba, Luis and Iacono, John and Langerman, Stefan},
+	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
+	Date-Added = {2016-07-13 19:00:22 +0000},
+	Date-Modified = {2016-07-16 14:56:44 +0000},
+	Pages = {15:1--15:16},
+	Read = {1},
+	Series = {Leibniz International Proceedings in Informatics},
+	Title = {{Incremental Voronoi diagrams}},
+	Url = {http://drops.dagstuhl.de/opus/volltexte/2016/5907},
+	Volume = {51},
+	Year = {2016},
+	Bdsk-Url-1 = {http://drops.dagstuhl.de/opus/volltexte/2016/5907},
+	Bdsk-Url-2 = {http://dx.doi.org/10.4230/LIPIcs.SoCG.2016.15}}
+
+@book{g-cp-67,
+	Author = {Grünbaum, Branko},
+	Date-Added = {2013-10-29 04:14:03 +0000},
+	Date-Modified = {2016-07-07 16:41:03 +0000},
+	Number = {XVI},
+	Publisher = {John Wiley \& Sons},
+	Read = {1},
+	Series = {Monographs in Pure and Applied Mathematics},
+	Title = {Convex Polytopes},
+	Year = {1967}}
 
 @article{a-ccccc-30,
 	Author = {Adkisson, Virgil W.},
@@ -1300,6 +1327,7 @@
 	Date-Added = {2015-08-20 20:26:15 +0000},
 	Date-Modified = {2015-08-20 20:44:36 +0000},
 	Journal = {Ann. Math.},
+	Number = {2},
 	Pages = {491--564},
 	Read = {1},
 	Title = {A polynomial upper bound on {Reidemeister} moves},
