--- a/jeffe.bib
+++ b/jeffe.bib
@@ -11,6 +11,12 @@
 @string{jeffe = {Jeff Erickson}}
 
 
+@misc{annular,
+	Author = {Chang, Hsien-Chih and Erickson, Jeff},
+	Howpublished = {Preprint},
+	Title = {Unwinding Annular Curves and Electrically Reducing Planar Networks},
+	Year = {2017}}
+
 @inproceedings{repcube,
 	Author = {Abel, Zachary and Ballinger, Brad and Demaine, Erik D. and Demaine, Martin L. and Erickson, Jeff and Hesterberg, Adam and Ito, Hiro and Kostitsyna, Irina and Lynch, Jayson and Uehara, Ryuhei},
 	Booktitle = {Abstracts 19th Japan Conf. Discrete Comput. Geom., Graphs, Games},
@@ -44,7 +50,6 @@
 	Author = {Chang, Hsien-Chih and Erickson, Jeff},
 	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
 	Date-Modified = {2017-01-02 23:41:38 +0000},
-	Note = {Full version to appear in \emph{Disc. Comput. Geom.}},
 	Pages = {29:1--29:15},
 	Series = {Leibniz International Proceedings in Informatics},
 	Title = {Untangling Planar Curves},
