--- a/jeffe.bib
+++ b/jeffe.bib
@@ -28,7 +28,7 @@
 	Year = {2016}}
 
 @inproceedings{fastweak,
-	Author = {Akitaya, Hugo and Aloupis, Greg and Erickson, Jeff and Tóth, Csaba},
+	Author = {Akitaya, Hugo and Aloupis, Greg and Erickson, Jeff and T{\'o}th, Csaba},
 	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
 	Date-Added = {2017-01-02 23:37:08 +0000},
 	Date-Modified = {2017-01-02 23:41:12 +0000},
